# Arcade-Game

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.c
_docs/: ref.txt  todo.txt
include/: animator.h  collider.h  graphic.h  input.h  mathf.h  status.h  util.h  vector2.h
source/: animator.c  collider.c  graphic.c  input.c  mathf.c  status.c  util.c  vector2.c
